# Space-in-Vader

./: README.md
vader/: .coverage  pyproject.toml
vader/tests/: test_board.py  test_game.py  test_invader.py  test_laser.py  test_main.py  test_starship.py
vader/vader/: __init__.py  board.py  game.py  gameobject.py  hello.py  invader.py  laser.py  main.py  starship.py
