[tool.poetry]
name = "vader"
version = "0.1.0"
description = ""
authors = ["Nathan Mornand <nathanlouis.mornand@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
mypy = "^1.14.1"
ruff = "^0.9.4"
coverage = "^7.6.11"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
myscript  = "vader.main:main"